tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#createFile(String).mjava
	protected IFile createFile(String data) {
		return TestUtils.createFile(project, "test" + (++count) + ".php", data);
	}

